[gd_scene load_steps=10 format=3 uid="uid://ckjhjbqi510m2"]

[ext_resource type="Script" uid="uid://cvkurnxlameao" path="res://sorting_mini_game/pollen_path_follow.gd" id="1_ni3ig"]
[ext_resource type="Script" uid="uid://dd16h0fgfahbk" path="res://sorting_mini_game.gd" id="1_ubcnt"]
[ext_resource type="Texture2D" uid="uid://veifuctdh7c8" path="res://sorting_mini_game/assets/bear paw1.png" id="3_ubcnt"]

[sub_resource type="Curve2D" id="Curve2D_ni3ig"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 545, 58, 0, 0, 0, 0, 545, 469)
}
point_count = 2

[sub_resource type="Animation" id="Animation_mbu0u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(578, 506)]
}

[sub_resource type="Animation" id="Animation_ubcnt"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.19, 0.3, 0.41, 0.62, 0.69, 0.78, 0.86, 0.98),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(578, 506), Vector2(596, 513), Vector2(640, 515), Vector2(594, 501), Vector2(548, 508), Vector2(552, 533), Vector2(518, 545), Vector2(569, 564), Vector2(594, 537)]
}

[sub_resource type="Animation" id="Animation_w20ja"]
resource_name = "swipe_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(578, 506), Vector2(-30, 506), Vector2(546, 506)]
}

[sub_resource type="Animation" id="Animation_124hn"]
resource_name = "swipe_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.54, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(578, 506), Vector2(1248, 506), Vector2(578, 506)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d0uym"]
_data = {
&"RESET": SubResource("Animation_mbu0u"),
&"idle": SubResource("Animation_ubcnt"),
&"swipe_left": SubResource("Animation_w20ja"),
&"swipe_right": SubResource("Animation_124hn")
}

[node name="SortingMiniGame" type="Node2D"]
script = ExtResource("1_ubcnt")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = -2

[node name="BG" type="Control" parent="CanvasLayer2"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2/BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.260242, 0.158414, 0.029621, 1)

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(33, 0)
curve = SubResource("Curve2D_ni3ig")

[node name="PollenPathFollow" type="PathFollow2D" parent="Path2D"]
position = Vector2(545, 58)
rotation = 1.5708
loop = false
script = ExtResource("1_ni3ig")

[node name="CoolDownTimer" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PollenLeftLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Pollen Left
0"
horizontal_alignment = 1

[node name="WrongLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Times Wrong
"

[node name="BadPollen" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 188.0
offset_top = 237.0
offset_right = 287.0
offset_bottom = 260.0
text = "BAD POLLEN"

[node name="GoodPollen" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 833.0
offset_top = 236.0
offset_right = 947.0
offset_bottom = 259.0
text = "GOOD POLLEN"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(578, 506)
scale = Vector2(1.84, 1.84)
texture = ExtResource("3_ubcnt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_d0uym")
}
autoplay = "idle"
speed_scale = 0.351

[connection signal="dump_pollen" from="." to="Path2D/PollenPathFollow" method="_on_sorting_mini_game_dump_pollen"]
[connection signal="end_mini_game" from="Path2D/PollenPathFollow" to="." method="end_mini_game"]
[connection signal="pollen_info" from="Path2D/PollenPathFollow" to="." method="_on_pollen_path_follow_pollen_info"]
[connection signal="timeout" from="CoolDownTimer" to="." method="_on_cool_down_timer_timeout"]
